--- a/.config/zoomus.conf
+++ b/.config/zoomus.conf
@@ -3,13 +3,14 @@ GeoLocale=system
 SensitiveInfoMaskOn=true
 asBarTopMargin=30
 autoPlayGif=false
+autoScale=false
 bForceMaximizeWM=false
 blockUntrustedSSLCert=false
 captureHDCamera=true
 chatListPanelLastWidth=230
 conf.webserver=https://us02web.zoom.us
 conf.webserver.vendor.default=https://zoom.us
-currentMeetingId=891 5033 2014
+currentMeetingId=
 deviceID=E8:B1:FC:A1:0E:37
 enable.host.auto.grab=true
 enableAlphaBuffer=true
@@ -46,5 +47,5 @@ recentlast.session=
 
 [zoom_new_im]
 is_landscape_mode=false
-main_frame_pixel_pos_narrow="376,680"
+main_frame_pixel_pos_narrow="377,488"
 main_frame_pixel_pos_wide="810,680"
